--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,18 +1,18 @@
 report.videoRecorderOption="{\\"enable\\"\:false,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"AVI\\",\\"videoQuality\\"\:\\"LOW\\",\\"recordAllTestCases\\"\:false,\\"allowedRecordIfFailed\\"\:true,\\"allowedRecordIfPassed\\"\:false}"
 mailConfig.encryptionEnabled=true
-mailConfig.host="W4NBYQx2f8HpeOjAwfjgDA\=\="
-mailConfig.port="yNUOwk0iqmw\="
-mailConfig.username="XD64QIa39xGIbELgeyD+CrJefWLhXesl"
-mailConfig.password="0C4pwym0oVKosYi6FVMe8Q\=\="
+mailConfig.host="9NLz+4tGZcQ\="
+mailConfig.port="9NLz+4tGZcQ\="
+mailConfig.username="9NLz+4tGZcQ\="
+mailConfig.password="9NLz+4tGZcQ\="
 mailConfig.securityProtocol="gvt3HeqA8J8\="
 mailConfig.attachment=true
 mailConfig.subject="Katalon Summary Report for ${suiteName} ${suiteCollectionName}"
 mailConfig.cc=""
 mailConfig.bcc=""
-mailConfig.useUsernameAsSender=true
-mailConfig.sender="ramdanhimself@gmail.com"
-mailConfig.reportRecipients="JVvgd++/kTTJTkNfnhXP9X6718WorDFq"
-mailConfig.reportFormat="[\\n  \\"HTML\\",\\n  \\"CSV\\"\\n]"
+mailConfig.useUsernameAsSender=false
+mailConfig.sender=""
+mailConfig.reportRecipients="9NLz+4tGZcQ\="
+mailConfig.reportFormat="[\\n  \\"CSV\\",\\n  \\"HTML\\"\\n]"
 mailConfig.sendTestSuiteReport=true
 mailConfig.sendReportTestFailedOnly=false
 mailConfig.sendTestSuiteCollectionReport=false
